@@ -7,4 +7,10 @@
 	split channels.js / settings.js & settings2.js (in the future settings2.js -> cfg.custom.xxx)
 	Added switch timers (atm 1 switch timer possible and for next program only)
 		switch timer reset from mainmenu.
+	EPG language is now based on Satellite/ NID/ TID
+	Added CA Mode to OSD
+	Full schedule try.
+	In guide mode Red - switch timer next program, Green now/next, Yellow Schedule, Blue program info.
+
+
 
